# NMDOF

./: .gitignore  Main.py  README.md  pyproject.toml
core/: Results.py  __init__.py  calc_relative_values.py  emittingstream.py  resources_path.py  run_OS.py  run_OS.tcl  win.py
resource_rc/: resource.py  resource.qrc
ui/: main_win.py  main_win.ui  win_OSmat.py  win_OSmat.ui  win_about.py  win_about.ui  win_data.py  win_data.ui  win_export.py  win_export.ui  win_importGM.py  win_importGM.ui  win_importGM1.py  win_importGM1.ui  win_mass.py  win_mass.ui  win_mat.py  win_mat.ui  win_run.py  win_run.ui  win_scale.py  win_scale.ui  win_solve_setting.py  win_solve_setting.ui  win_tcl_file.py  win_tcl_file.ui  win_terminal.py  win_terminal.ui
